welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:43: error: not found: value faireligneM
override def run() { for (i <- 1 to 3) {faireligneM(); monter()}
                                        ^